--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
           preço único.
         </h1>
         <img
-          src="img/Combo.png"
+          src="imagem/Combo.png"
           alt="O combo+ é a junção do alura+ e o alura língu"
           class="container__imagem"
         />
@@ -38,7 +38,7 @@
 
     <section class="container secundario">
       <img
-        src="img/Plataformas.png"
+        src="imagem/Plataformas.png"
         alt="Um monitor e um celular com a alura plus aberta"
         class="secundario__imagem"
       />
@@ -61,11 +61,11 @@
           >Assine o Combo+</a
         >
       </div>
-      <img src="img/Telas.png" alt="Tela do alura+ e alura língua" />
+      <img src="imagem/Telas.png" alt="Tela do alura+ e alura língua" />
     </section>
     <section class="container secundario">
       <img
-        src="img/Notebook.png"
+        src="imagem/Notebook.png"
         alt="Notebook com a página do curso HTML5 e CSS3 da Alura aberta"
         class="secundario__imagem"
       />
@@ -83,21 +83,21 @@
       </h2>
       <ul class="dispositivos__lista">
         <il
-          ><img src="img/tv.png" alt="Ícone de televisão" />
+          ><img src="imagem/tv.png" alt="Ícone de televisão" />
           <h3>Tv</h3></il
         >
         <il
-          ><img src="img/computador.png" alt="Ícone de computador" />
+          ><img src="imagem/computador.png" alt="Ícone de computador" />
           <h3>Computador</h3></il
         >
         <il
-          ><img src="img/celular.png" alt="Ícone de celular" />
+          ><img src="imagem/celular.png" alt="Ícone de celular" />
           <h3>Celular</h3></il
         >
       </ul>
     </section>
     <footer class="rodape">
-      <img src="img/Logo.png" alt="Alura+" class="rodape__logo" />
+      <img src="imagem/Logo.png" alt="Alura+" class="rodape__logo" />
       <ul class="rodape__lista">
         <li class="lista__link">
           <a href="#">Idioma</a>
